adjust seed, basic index and routes

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>All Jobs</h1>
+
+<% unless user_signed_in? %>
+  <ul>
+    <li><%= link_to "Login User", new_user_session_path %></li>
+    <br>
+    <li><%= link_to "New User", new_user_registration_path %></li>
+  </ul>
+<% end %>
+
+<% if user_signed_in? %>
+  <ul>
+    <li><%= link_to "Logout User", destroy_user_session_path, :method => :delete %></li>
+  </ul> 
+<% end %>
+
+<% unless headhunter_signed_in? %>
+    <ul>
+      <li><%= link_to "Login Headhunter", new_headhunter_session_path %></li>
+      <br>
+      <li><%= link_to "New Headhunter", new_headhunter_registration_path %></li>
+    </ul>
+<% end %>
+
+<% if headhunter_signed_in? %>
+  <ul>
+    <li><%= link_to "Logout Headhunter", destroy_headhunter_session_path, :method => :delete %></li>
+  </ul> 
+<% end %>
