--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -21,12 +21,12 @@
   
   <div>
     <%= form.label :educacional_background %><br>
-    <%= form.text_field :educacional_background %>
+    <%= form.text_area :educacional_background %>
   </div>
   
   <div>
     <%= form.label :experience %><br>
-    <%= form.text_field :experience %>
+    <%= form.text_area :experience %>
   </div>
 
   <div>
