--- a/app/views/profiles/show.erb
+++ b/app/views/profiles/show.erb
@@ -1,12 +1,11 @@
 <h2><%= @profile.name %></h2>
-<h2><%= @profile.social_name %></h2>
-
-<ul>    
-  <li><%= @profile.birthdate %></li>
-  <li><%= @profile.description %></li>   
-  <li><%= @profile.educacional_background %></li>
-  <li><%= @profile.experience %></li>
-</ul>
+<h3><%= @profile.social_name %></h3>
+   
+  <p>Birthday: <%= @profile.birthdate %><br>
+     Description: <%= @profile.description %><br>
+     Educational Background: <%= @profile.educacional_background %><br>
+     Experience: <%= @profile.experience %>
+  </p>
 
 <ul>
   <li><%= link_to "Edit", edit_profile_path(@profile) %></li>
