adjust logic profiles controller and index view

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,24 +1,18 @@
 <h1>All Jobs</h1>
 
-<% unless user_signed_in? && headhunter_signed_in? %>
+<% unless user_signed_in? or headhunter_signed_in? %>
+  <p> Welcome to All Jobs, choose your login or create your User/Headhunter: </p>
   <ul>
-    <li><%= link_to "Login User", new_user_session_path %></li>
-    <li><%= link_to "New User", new_user_registration_path %></li>
+    <li><%= link_to "Login User", new_user_session_path %> \ <%= link_to "New User", new_user_registration_path %></li>
+    <li><%= link_to "Login Headhunter", new_headhunter_session_path %> \ <%= link_to "New Headhunter", new_headhunter_registration_path %></li>
   </ul>
 <% end %>
 
 <% if user_signed_in? %>
   <ul>
     <li><%= link_to "Logout User", destroy_user_session_path, :method => :delete %></li>
-    <li><%= link_to "Create Profile", new_profile_path %></li>
+    <li><%= link_to "Create/Edit Profile", new_profile_path %></li>
   </ul> 
-<% end %>
-
-<% unless headhunter_signed_in? && user_signed_in? %>
-    <ul>
-      <li><%= link_to "Login Headhunter", new_headhunter_session_path %></li>
-      <li><%= link_to "New Headhunter", new_headhunter_registration_path %></li>
-    </ul>
 <% end %>
 
 <% if headhunter_signed_in? %>
