--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Jobs</h1>
 
-<% unless user_signed_in? or headhunter_signed_in? %>
+<% unless user_signed_in? || headhunter_signed_in? %>
   <p> Welcome to All Jobs, choose your login or create your User/Headhunter: </p>
   <ul>
     <li><%= link_to "Login User", new_user_session_path %> \ <%= link_to "New User", new_user_registration_path %></li>
