adjust title on application view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+  <h1>All Jobs</h1>
   <nav>
     <% if user_signed_in? %>
       <%= link_to 'Logout User', destroy_user_session_path, method: :delete %> -
