--- a/app/views/jobs/show.erb
+++ b/app/views/jobs/show.erb
@@ -12,7 +12,7 @@ Place: <li><%= @job.place %>
 </p>
 
 <ul>
-  <li><%= link_to "Apply for this Job", batata_path %></li>
+  <li><%= link_to "Apply for this Job", job_enroll_path(@job, user_id: current_user.id), method: :post %></li>
 </ul>
 
 <ul>
