--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,13 @@
     <% end %>
     <% if headhunter_signed_in? %>
       <%= link_to 'Logout Headhunter', destroy_headhunter_session_path, method: :delete %> -
-      <li><%= link_to "New Job Opening", new_job_path %></li>
+      <%= link_to "New Job Opening", new_job_path %> -
+      <%= link_to "All Job Applies", applies_path %><br>
       <br>
       <span>You are <%= current_headhunter.email %></span>
     <% else %>
       <% unless user_signed_in? %>
-        <%= link_to 'Login Headhunter', new_user_session_path %> \ <%= link_to "New Headhunter", new_headhunter_registration_path %>
+        <%= link_to 'Login Headhunter', new_headhunter_session_path %> \ <%= link_to "New Headhunter", new_headhunter_registration_path %>
       <% end %>  
     <% end %>
   </nav>
