--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -1,9 +1,13 @@
-<h4><%= @apply.job.title %></h4>
+<h2><%= @apply.job.title %></h2>
 
-<p>
-<b>Applied User ID:</b> <%= @apply.user_id %><br>
-<b>Applied User Email:</b> <%= @apply.user.email %><br>
-</p>
+<% if user_signed_in? || headhunter_signed_in? %>
+  <p>
+  <h3>Apply</h3>
+  <b>ID:</b> <%= @apply.id %><br>
+  <b>User ID:</b> <%= @apply.user_id %><br>
+  <b>User Email:</b> <%= @apply.user.email %><br>
+  </p>
+<% end %>
 
 <p>
 <b>Deadline to apply:</b> <%= @apply.job.date %><br>
@@ -12,7 +16,7 @@
 <b>Salary:</b> <%= @apply.job.salary %><br>
 <b>Company:</b> <%= @apply.job.company %><br>
 <b>Level:</b> <%= @apply.job.level %><br>
-<b>Place:</b> <li><%= @apply.job.place %>
+<b>Place:</b> <%= @apply.job.place %>
 </p>
 
 <%= link_to "Return to Home", root_path %>
