--- a/app/views/jobs/show.erb
+++ b/app/views/jobs/show.erb
@@ -8,7 +8,7 @@
 <b>Salary</b>: <%= @job.salary %><br>
 <b>Company</b>: <%= @job.company %><br>
 <b>Level</b>: <%= @job.level %><br>
-<b>Place</b>: <li><%= @job.place %>
+<b>Place</b>: <%= @job.place %>
 </p>
 
 <% if user_signed_in? %>
