simply adjust index text

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,3 @@
-<p> Welcome to All Jobs, choose your login or create your User/Headhunter </p>
+<h3>Welcome to All Jobs</h3>
+
+<p>Choose your login or create your User/Headhunter</p>
