--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,14 +2,15 @@
 
 <% if headhunter_signed_in? || user_signed_in? %>
   <% @jobs.each do |job| %>
-    <h4><%= job.title %></h4>
-    <b>Deadline to apply:</b> <%= job.date %><br>
-    <b>Description</b>: <%= job.description %><br>
-    <b>Skills</b>: <%= job.skills %><br>
-    <b>Salary</b>: <%= job.salary %><br>
-    <b>Company</b>: <%= job.company %><br>
-    <b>Level</b>: <%= job.level %><br>
-    <b>Place</b>: <%= job.place %>
+    <h4><%= link_to job.title, job %></h4>
+    <p> 
+    Deadline to apply: <%= job.date %><br>
+    Description: <%= job.description %><br>
+    Skills</b: <%= job.skills %><br>
+    Salary: <%= job.salary %><br>
+    Company: <%= job.company %><br>
+    Level: <%= job.level %><br>
+    Place: <%= job.place %>
     </p> 
     <% end %>
 <% end %>
