--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,7 @@
-<h3>Welcome to All Jobs</h3>
+<h3>Welcome!</h3>
 
-<p>Choose your login or create your User/Headhunter</p>
+<% unless headhunter_signed_in? || user_signed_in? %>
+  <p>Choose your login option or create your User/Headhunter.</p>
+<% else %>
+  <p>Choose an option above.</p>
+<% end %>
