--- a/app/views/jobs/show.erb
+++ b/app/views/jobs/show.erb
@@ -26,4 +26,16 @@ Place: <%= @job.place %>
   </ul>
 <% end %>
 
+<% if headhunter_signed_in? %>
+  <h4>All applies to this job</h4>
+  <% @job.applies.each do |apply| %>
+    <p>
+    ID: <%= link_to apply.id, apply %><br>
+    Job: <%= apply.job.title %><br>
+    User E-mail: <%= apply.user_email %><br>
+    <%= link_to "View", apply %>
+    </p> 
+  <% end %>  
+<% end %>
+
 <%= link_to "Return to Home", root_path %>
