create test see all profiles and adjust views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
       <%= link_to "New Job Opening", new_job_path %> -
       <%= link_to 'Applies', applies_path %> -
       <%= link_to 'Openings', jobs_path %> -
+      <%= link_to 'Profiles', profiles_path %> -
       <%= link_to 'Logout Headhunter', destroy_headhunter_session_path, method: :delete %><br>
       <br>
       <span>You are <%= current_headhunter.email %></span>
