adjust to show only social name on profiles

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -3,9 +3,12 @@
 <% if headhunter_signed_in? %>
   <% @profiles.each do |profile| %>
     <p>
-    <%= link_to profile.name, profile %><br>
-    Social Name: <%= profile.social_name %><br>
-    User ID: <%= profile.user_id %><br>
+    <% unless profile.social_name.blank? %>
+      <%= link_to profile.social_name, profile %><br>
+    <% else %>
+      <%= link_to profile.name, profile %><br>
+    <% end %>
+    User ID: <%= profile.user_id %><br>  
     </p>
   <% end %>
 <% end %>
