--- a/app/views/profiles/show.erb
+++ b/app/views/profiles/show.erb
@@ -1,6 +1,9 @@
-<h2><%= @profile.name %></h2>
-<h3><%= @profile.social_name %></h3>
-   
+<% unless @profile.social_name.blank? %>
+  <h3><%= @profile.social_name %></h3>
+<% else %>
+  <h3><%= @profile.name %></h3>
+<% end %>
+
 <p>
 Birthday: <%= @profile.birthdate %><br>
 Description: <%= @profile.description %><br>
