--- a/app/views/profiles/show.erb
+++ b/app/views/profiles/show.erb
@@ -1,7 +1,7 @@
-<% unless @profile.social_name.blank? %>
-  <h3><%= @profile.social_name %></h3>
+<% if @profile.social_name.blank? %>
+  <h3><%= @profile.name %></h3>  
 <% else %>
-  <h3><%= @profile.name %></h3>
+  <h3><%= @profile.social_name %></h3>
 <% end %>
 
 <p>
