adjust views and forms Comments

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,11 @@
 <h3>Welcome!</h3>
 
 <% unless headhunter_signed_in? || user_signed_in? %>
-  <p>Choose your login option or create your User/Headhunter.</p>
+  <p>
+    Choose your login option or create your User/Headhunter.
+  </p>
 <% else %>
-  <p>Choose an option above.</p>
+  <p>
+    Choose an option above.
+  </p>
 <% end %>
