adjust comments on profile

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,9 @@
 <p>
-  <strong>Date/Time:</strong>
+  Date/Time:
   <%= comment.datetime %>
 </p>
 
 <p>
-  <strong>Comment:</strong>
+  Comment:
   <%= comment.body %>
 </p>
