--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [ @profile, @profile.comments.build ] do |form| %>
+<%= form_with model: comment do |form| %>
     <p>
       <%= form.label :datetime %><br>
       <%= form.text_field :datetime %>
@@ -11,5 +11,6 @@
       <%= form.submit %>
     </p>
     <%= form.hidden_field :headhunter_id %>
+    <%= form.hidden_field :profile_id %>
   <% end %>
   
