--- a/app/views/profiles/show.erb
+++ b/app/views/profiles/show.erb
@@ -1,5 +1,5 @@
 <% if @profile.social_name.blank? %>
-  <h3>d<%= @profile.name %></h3>  
+  <h3><%= @profile.name %></h3>  
 <% else %>
   <h3><%= @profile.social_name %></h3>
 <% end %>
@@ -17,12 +17,18 @@
   </ul>
 <% end %>
 
-<% if headhunter_signed_in? %>
-  <h3>Comments</h23>
-  <%= render @article.comments %>
-
-  <h3>Add a comment:</h3>
-  <%= render 'comments/form' %>
-<% end %>
+<div>
+  <br>
+  <% @comments.each do |comment| %>
+    <% if comment.headhunter_id == current_headhunter.id %>    
+      <div>
+        <p><%= comment.datetime %></p>
+        <p><%= comment.body %></p>
+        <p><%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </div>
+    <% end %>
+  <% end %>
+  <%= render partial: 'comments/form', locals: { comment: @comment } %>
+</div>
 
 <%= link_to "Return to Home", root_path %>
