--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,13 @@
-<p>
-  Date/Time:
-  <%= comment.datetime %>
-</p>
-
-<p>
-  Comment:
-  <%= comment.body %>
-</p>
+<b>Your Comments</b>
+<% @comments.each do |comment| %>
+  <% if comment.headhunter_id == current_headhunter.id %>    
+    <div>
+      <p><b>When?</b> <%= comment.datetime %></p>
+      <p><b>Comment:</b> <%= comment.body %></p>
+      <p>
+        <%= link_to 'Edit', edit_comment_path(comment) %> -
+        <%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+      </p>
+    </div>
+  <% end %>
+<% end %>
