--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
       <%= link_to 'Applies', applies_path %> -
       <%= link_to 'Openings', jobs_path %> -
       <%= link_to 'Profiles', profiles_path %> -
+      <%= link_to 'Stars', stars_path %> -
       <%= link_to 'Logout Headhunter', destroy_headhunter_session_path, method: :delete %><br>
       <br>
       <span>You are <%= current_headhunter.email %></span>
