--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,44 +9,9 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-  <% if notice %>
-    <p class="alert alert-success"><%= notice %></p>
-  <% end %>
-  <% if alert %>
-    <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
-  <h1>All Jobs</h1>
-  <nav>
-    <% if user_signed_in? %>
-      <%= link_to 'Create/Edit Profile', new_profile_path %> -
-      <%= link_to 'Openings', jobs_path %> -
-      <%= link_to 'Logout User', destroy_user_session_path, method: :delete %><br>
-      <br>
-      <span>You are <%= current_user.email %></span> 
-    <% else %>
-      <% unless headhunter_signed_in? %>
-        <%= link_to 'Login User', new_user_session_path %> - 
-        <%= link_to "New User", new_user_registration_path %> -
-      <% end %>
-    <% end %>
-    <% if headhunter_signed_in? %>
-      <%= link_to "New Job Opening", new_job_path %> -
-      <%= link_to 'Applies', applies_path %> -
-      <%= link_to 'Openings', jobs_path %> -
-      <%= link_to 'Profiles', profiles_path %> -
-      <%= link_to 'Stars', stars_path %> -
-      <%= link_to 'Logout Headhunter', destroy_headhunter_session_path, method: :delete %><br>
-      <br>
-      <span>You are <%= current_headhunter.email %></span>
-    <% else %>
-      <% unless user_signed_in? %>
-        <%= link_to 'Login Headhunter', new_headhunter_session_path %> -
-        <%= link_to "New Headhunter", new_headhunter_registration_path %>
-      <% end %>  
-    <% end %>
-  </nav>
+    <%= render 'layouts/navbar' %>
+    <%= render 'layouts/notice' %>
     <%= yield %>
   </body>
 </html>
