moving and adjusting user tests

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <% if headhunter_signed_in? %>
-    <%= link_to "New Job Opening", new_job_path %> -
+    <%= link_to 'New Job Opening', new_job_path %> -
     <%= link_to 'Applies', applies_path %> -
     <%= link_to 'Openings', jobs_path %> -
     <%= link_to 'Profiles', profiles_path %> -
