--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -11,7 +11,7 @@
 
   <div>
     <%= form.label :birthdate %><br>
-    <%= form.text_field :birthdate %>
+    <%= form.date_field :birthdate %>
   </div>
   
   <div>
