adjust model and tests to salary be decimal

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: job do |form| %>
    <div>
-    <%= form.label :title %><br>
+    <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
   
@@ -15,28 +15,28 @@
   </div>
   
   <div>
-    <%= form.label :salary %><br>
-    <%= form.text_field :salary  %>
+    <%= form.label :salary %>
+    <%= form.text_field :salary %>
   </div>
   
   <div>
-    <%= form.label :company %><br>
+    <%= form.label :company %>
     <%= form.text_field :company  %>
   </div>
   
   <div>
-    <%= form.label :level %><br>
+    <%= form.label :level %>
     <%= form.text_field :level  %>
   </div>
   
   <div>
-    <%= form.label :place %><br>
+    <%= form.label :place %>
     <%= form.text_field :place %>
   </div>
 
   <div>
-    <%= form.label :date %><br>
-    <%= form.text_field :date %>
+    <%= form.label :date %>
+    <%= form.date_field :date %>
   </div>
 
   <div>
