--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,13 +2,14 @@
 
 <% if headhunter_signed_in? || user_signed_in? %>
   <% @jobs.each do |job| %>
-    <p>
-      <b><%= link_to job.title, job %></b> -
-      Deadline: <%= job.date %>
+      <%= link_to job do %> 
+        <dt>Job</dt>
+        <dd><%= job.title %> - <%= job.code %></dd> 
+      <% end %>  
+      <dt>Deadline</dt>
+      <dd><%= job.date %></dd>
       <br>
     </p>
   <% end %>
 <% end %>
 <%= paginate @jobs %>
-
-<%= link_to "Return to Home", root_path %>
