--- a/app/views/jobs/show.erb
+++ b/app/views/jobs/show.erb
@@ -1,5 +1,7 @@
 <h4><%= @job.title %></h4>
 
+<dt>Code</dt> 
+<dd><%= @job.code %></dd>
 <dt>Deadline to apply</dt> 
 <dd><%= @job.date %></dd>
 <dt>Description</dt>
